--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,9 +23,10 @@ jobs:
       run: |
         pip install -r requirements.txt
 
-    - name: Exécution des tests
+    - name: Build de l'image Docker
       run: |
-        pytest
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/calculatrice-flask:latest .
+
 
     - name: Connexion à Docker Hub
       uses: docker/login-action@v3
