--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,41 +2,50 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
-  build-test-deploy:
+  build-test-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout du code
-      uses: actions/checkout@v4
+      - name: Checkout du code
+        uses: actions/checkout@v4
 
-    - name: Installation de Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: "3.11"
+      - name: Installation de Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
 
-    - name: Installation des dépendances
-      run: |
-        pip install -r requirements.txt
+      - name: Installation des dépendances
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Connexion à Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Exécution des tests
+        run: |
+          pytest
 
-    - name: Build de l'image Docker
-      run: |
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/calculatrice-flask:latest .
+      - name: Connexion à Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Push de l'image Docker
-      run: |
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/calculatrice-flask:latest
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Déploiement automatique
-      run: |
-        echo "Déploiement automatique simulé (image prête)"
+      - name: Build & Push image Docker
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/calculatrice-flask:latest
+
+      - name: Déploiement
+        run: |
+          echo "Déploiement : à compléter (VPS/Render/Railway...)"
+
+
